added 3rd message

--- a/samplegit.html
+++ b/samplegit.html
@@ -7,5 +7,6 @@
     <h1>Hello, World!</h1>
     <p>this is new test</p>
     <p>another edit on the master branch</p>
+    <p>a 3rd edit</p>
 </body>
 </html>
