added i love my yayang table

--- a/samplegit.html
+++ b/samplegit.html
@@ -8,5 +8,15 @@
     <p>this is new test</p>
     <p>another edit on the master branch</p>
     <p>a 3rd edit</p>
+    <table>
+        <thead>
+            <th>Who I love</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>My yayang</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
