added another row for only my yayang

--- a/samplegit.html
+++ b/samplegit.html
@@ -16,6 +16,9 @@
             <tr>
                 <td>My yayang</td>
             </tr>
+            <tr>
+                <td>only my yayang</td>
+            </tr>
         </tbody>
     </table>
 </body>
