edtied another row

--- a/samplegit.html
+++ b/samplegit.html
@@ -17,7 +17,7 @@
                 <td>My yayang</td>
             </tr>
             <tr>
-                <td>only my yayang</td>
+                <td>only my yang</td>
             </tr>
         </tbody>
     </table>
