--- a/samplegit.html
+++ b/samplegit.html
@@ -20,7 +20,7 @@
                 <td>only my yang</td>
             </tr>
             <tr>
-                <td>test 3rd</td>
+                <td>test 3rd updated now</td>
             </tr>
         </tbody>
     </table>
